--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -6,6 +6,7 @@
 tab = overload(sunprops, tab)
 capslock = overload(nav, esc)
 rightalt = layer(steps)
+rightmeta = rightcontrol
 
 [steps:G]
 left = macro(leftalt+left)
@@ -67,6 +68,10 @@ o = pageup
 p = end
 
 [sunprops]
+left  = macro(props+left)
+right = macro(props+right)
+down  = macro(props+down)
+up    = macro(props+up)
 1 = macro(props+1)
 2 = macro(props+2)
 3 = macro(props+3)
@@ -111,12 +116,19 @@ m = macro(props+m)
 / = macro(props+/)
 - = macro(props+-)
 equal = macro(props+equal)
+backspace = macro(props+backspace)
 [ = macro(props+[)
 ] = macro(props+])
+' = macro(props+')
+backslash = macro(props+backslash)
+`           = leftmouse
+leftcontrol = rightmouse
 space = leftmouse
-enter = menu
-rightmeta = rightmouse
-backspace = macro(props+delete)
+enter = macro(props+enter)
+left  = macro(props+left)
+right = macro(props+right)
+down  = macro(props+down)
+up    = macro(props+up)
 
 [sunprops+funcs]
 1 = macro(leftmeta+kp1)
