--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -7,6 +7,10 @@ tab = overload(sunprops, tab)
 capslock = overload(nav, esc)
 rightalt = layer(steps)
 rightmeta = rightcontrol
+leftcontrol = overload(control, oneshot(premouse))
+
+[premouse]
+tab = overload(mouse, tab)
 
 [steps:G]
 left = macro(leftalt+left)
@@ -34,6 +38,8 @@ k = pageup
 l = end
 
 [nav]
+up = macro(compose+up)
+down = macro(compose+down)
 h = left
 j = down
 k = up
@@ -68,10 +74,6 @@ o = pageup
 p = end
 
 [sunprops]
-left  = macro(props+left)
-right = macro(props+right)
-down  = macro(props+down)
-up    = macro(props+up)
 1 = macro(props+1)
 2 = macro(props+2)
 3 = macro(props+3)
@@ -116,12 +118,13 @@ m = macro(props+m)
 / = macro(props+/)
 - = macro(props+-)
 equal = macro(props+equal)
-backspace = macro(props+backspace)
 [ = macro(props+[)
 ] = macro(props+])
 ' = macro(props+')
+backspace = macro(props+backspace)
 backslash = macro(props+backslash)
-`           = leftmouse
+leftshift  = swap(mouse)
+rightshift = swap(mouse)
 leftcontrol = rightmouse
 space = leftmouse
 enter = macro(props+enter)
@@ -130,22 +133,41 @@ right = macro(props+right)
 down  = macro(props+down)
 up    = macro(props+up)
 
-[sunprops+funcs]
-1 = macro(leftmeta+kp1)
-2 = macro(leftmeta+kp2)
-3 = macro(leftmeta+kp3)
-q = macro(leftmeta+kp4)
-w = macro(leftmeta+kp5)
-e = macro(leftmeta+kp6)
-a = macro(leftmeta+kp7)
-s = macro(leftmeta+kp8)
-d = macro(leftmeta+kp9)
+[mouse]
+1 = macro2(9, 50, macro(prog1))
+2 = macro2(9, 50, macro(prog2))
+3 = macro2(9, 50, macro(prog3))
+q = macro2(9, 50, macro(prog4))
+w = macro2(9, 50, macro(f14))
+e = macro2(9, 50, macro(f15))
+a = macro2(9, 50, macro(f16))
+s = macro2(9, 50, macro(f17))
+d = macro2(9, 50, macro(f18))
 
-h = home
-j = pagedown
-k = pageup
-l = end
+h = macro2(9, 50, macro(props+left))
+j = macro2(9, 50, macro(props+down))
+k = macro2(9, 50, macro(props+up))
+l = macro2(9, 50, macro(props+right))
+i = command(wlrctl pointer scroll 20 0)
+o = command(wlrctl pointer scroll -20 0)
+
+leftshift = overload(shift, oneshot(sunprops))
+rightshift = overload(shift, oneshot(sunprops))
+backslash = macro(props+pageup)
+enter =  macro(props+pagedown)
+space = leftmouse
+leftcontrol = rightmouse
+leftalt = timeout(macro(xfer), 100, macro(menu menu))
+
+u = uwb
+i = send
+o = kbdillumdown
+8 = config
+9 = computer
+0 = setup
+6 = front
+5 = scale
 
 [global]
 disable_modifier_guard = 1
-macro_sequence_timeout = 250
+#macro_sequence_timeout = 50
