speed up cursor. Enabled wheel keys via dotool

--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -127,6 +127,9 @@ leftshift  = swap(mouse)
 rightshift = swap(mouse)
 leftcontrol = rightmouse
 space = leftmouse
+rightalt     = macro2(3, 50, macro(props+pageup))
+rightcontrol = macro2(3, 50, macro(props+pagedown))
+rightmeta    = macro2(3, 50, macro(props+pagedown))
 enter = macro(props+enter)
 left  = macro(props+left)
 right = macro(props+right)
@@ -134,39 +137,39 @@ down  = macro(props+down)
 up    = macro(props+up)
 
 [mouse]
-1 = macro2(9, 50, macro(prog1))
-2 = macro2(9, 50, macro(prog2))
-3 = macro2(9, 50, macro(prog3))
-q = macro2(9, 50, macro(prog4))
-w = macro2(9, 50, macro(f14))
-e = macro2(9, 50, macro(f15))
-a = macro2(9, 50, macro(f16))
-s = macro2(9, 50, macro(f17))
-d = macro2(9, 50, macro(f18))
+1 = macro2(3, 30, macro(prog1))
+2 = macro2(3, 30, macro(prog2))
+3 = macro2(3, 30, macro(prog3))
+q = macro2(3, 30, macro(prog4))
+w = macro2(3, 30, macro(f14))
+e = macro2(3, 30, macro(f15))
+a = macro2(3, 30, macro(f16))
+s = macro2(3, 30, macro(f17))
+d = macro2(3, 30, macro(f18))
 
-h = macro2(9, 50, macro(props+left))
-j = macro2(9, 50, macro(props+down))
-k = macro2(9, 50, macro(props+up))
-l = macro2(9, 50, macro(props+right))
-i = command(wlrctl pointer scroll 20 0)
-o = command(wlrctl pointer scroll -20 0)
+h = macro2(3, 30, macro(props+left))
+j = macro2(3, 30, macro(props+down))
+k = macro2(3, 30, macro(props+up))
+l = macro2(3, 30, macro(props+right))
+i = command(echo wheel 1 | dotoolc)
+o = command(echo wheel -1 | dotoolc)
 
-leftshift = overload(shift, oneshot(sunprops))
-rightshift = overload(shift, oneshot(sunprops))
-backslash = macro(props+pageup)
-enter =  macro(props+pagedown)
-space = leftmouse
+space       = leftmouse
+enter       = menu
 leftcontrol = rightmouse
-leftalt = timeout(macro(xfer), 100, macro(menu menu))
+leftalt     = timeout(macro(xfer), 100, macro(menu menu))
+leftshift  = overload(shift, oneshot(sunprops))
+rightshift = overload(shift, oneshot(sunprops))
+rightalt     = macro2(3, 50, macro(props+pageup))
+rightcontrol = macro2(3, 50, macro(props+pagedown))
+rightmeta    = macro2(3, 50, macro(props+pagedown))
 
 u = uwb
-i = send
-o = kbdillumdown
-8 = config
-9 = computer
-0 = setup
-6 = front
-5 = scale
+f = front
+g = config
+r = computer
+t = setup
+equal = scale
 
 [global]
 disable_modifier_guard = 1
