modify .gitignore. Changed wheel bindings

--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -118,18 +118,15 @@ m = macro(props+m)
 / = macro(props+/)
 - = macro(props+-)
 equal = macro(props+equal)
-[ = macro(props+[)
 ] = macro(props+])
-' = macro(props+')
+[ = macro2(3, 50, macro(props+pagedown))
+' = macro2(3, 50, macro(props+pageup))
 backspace = macro(props+backspace)
 backslash = macro(props+backslash)
 leftshift  = swap(mouse)
 rightshift = swap(mouse)
 leftcontrol = rightmouse
 space = leftmouse
-rightalt     = macro2(3, 50, macro(props+pageup))
-rightcontrol = macro2(3, 50, macro(props+pagedown))
-rightmeta    = macro2(3, 50, macro(props+pagedown))
 enter = macro(props+enter)
 left  = macro(props+left)
 right = macro(props+right)
@@ -160,9 +157,8 @@ leftcontrol = rightmouse
 leftalt     = timeout(macro(xfer), 100, macro(menu menu))
 leftshift  = overload(shift, oneshot(sunprops))
 rightshift = overload(shift, oneshot(sunprops))
-rightalt     = macro2(3, 50, macro(props+pageup))
-rightcontrol = macro2(3, 50, macro(props+pagedown))
-rightmeta    = macro2(3, 50, macro(props+pagedown))
+[ = macro2(3, 50, macro(props+pagedown))
+' = macro2(3, 50, macro(props+pageup))
 
 u = uwb
 f = front
