--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -119,15 +119,15 @@ m = macro(props+m)
 - = macro(props+-)
 equal = macro(props+equal)
 ] = macro(props+])
-[ = macro2(3, 50, macro(props+pagedown))
-' = macro2(3, 50, macro(props+pageup))
+[ = macro2(3, 200, macro(props+pagedown))
+' = macro2(3, 200, macro(props+pageup))
 backspace = macro(props+backspace)
 backslash = macro(props+backslash)
 leftshift  = swap(mouse)
 rightshift = swap(mouse)
 leftcontrol = rightmouse
-space = leftmouse
-enter = macro(props+enter)
+space       = timeout(macro(leftmouse), 250, macro(menu menu))
+enter = xfer
 left  = macro(props+left)
 right = macro(props+right)
 down  = macro(props+down)
@@ -151,21 +151,25 @@ l = macro2(3, 30, macro(props+right))
 i = command(echo wheel 1 | dotoolc)
 o = command(echo wheel -1 | dotoolc)
 
-space       = leftmouse
-enter       = menu
+space       = timeout(macro(leftmouse), 150, macro(menu menu))
+enter       = kpplusminus
 leftcontrol = rightmouse
-leftalt     = timeout(macro(xfer), 100, macro(menu menu))
+leftalt     = xfer
 leftshift  = overload(shift, oneshot(sunprops))
 rightshift = overload(shift, oneshot(sunprops))
-[ = macro2(3, 50, macro(props+pagedown))
-' = macro2(3, 50, macro(props+pageup))
+[ = macro2(9, 30, macro(props+pagedown))
+' = macro2(9, 30, macro(props+pageup))
 
 u = uwb
 f = front
 g = config
 r = computer
-t = setup
+t = hp
 equal = scale
+z = zoom
+, = kpjpcomma
+. = kpleftparen
+/ = kpplusminus
 
 [global]
 disable_modifier_guard = 1
