alternative way to enter mouse mode

--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -4,13 +4,12 @@
 [main]
 `   = overload(funcs, `)
 tab = overload(sunprops, tab)
+backslash = overload(sunprops, backslash)
 capslock = overload(nav, esc)
-rightalt = layer(steps)
+enter = overload(nav, enter)
 rightmeta = rightcontrol
-leftcontrol = overload(control, oneshot(premouse))
+rightalt = layer(steps)
 
-[premouse]
-tab = overload(mouse, tab)
 
 [steps:G]
 left = macro(leftalt+left)
@@ -118,48 +117,48 @@ m = macro(props+m)
 / = macro(props+/)
 - = macro(props+-)
 equal = macro(props+equal)
-] = macro(props+])
-[ = macro2(3, 200, macro(props+pagedown))
-' = macro2(3, 200, macro(props+pageup))
-backspace = macro(props+backspace)
-backslash = macro(props+backslash)
-leftshift  = swap(mouse)
-rightshift = swap(mouse)
-leftcontrol = rightmouse
-space       = timeout(macro(leftmouse), 250, macro(menu menu))
-enter = xfer
 left  = macro(props+left)
 right = macro(props+right)
 down  = macro(props+down)
 up    = macro(props+up)
+] = macro(props+])
+[ = macro2(3, 50, macro(props+pagedown))
+' = macro2(3, 50, macro(props+pageup))
+backspace = macro(props+backspace)
+backslash = macro(props+backslash)
 
-[mouse]
-1 = macro2(3, 30, macro(prog1))
-2 = macro2(3, 30, macro(prog2))
-3 = macro2(3, 30, macro(prog3))
-q = macro2(3, 30, macro(prog4))
-w = macro2(3, 30, macro(f14))
-e = macro2(3, 30, macro(f15))
-a = macro2(3, 30, macro(f16))
-s = macro2(3, 30, macro(f17))
-d = macro2(3, 30, macro(f18))
+leftmeta = overload(mouse, swap(mouse))
+space = timeout(macro(leftmouse), 250, macro(menu menu))
+enter = rightmouse
 
-h = macro2(3, 30, macro(props+left))
-j = macro2(3, 30, macro(props+down))
-k = macro2(3, 30, macro(props+up))
-l = macro2(3, 30, macro(props+right))
-i = command(echo wheel 1 | dotoolc)
-o = command(echo wheel -1 | dotoolc)
+[mouse:props]
+1 = macro2(20, 35, macro(prog1))
+2 = macro2(20, 35, macro(prog2))
+3 = macro2(20, 35, macro(prog3))
+q = macro2(20, 35, macro(prog4))
+w = macro2(20, 35, macro(f14))
+e = macro2(20, 35, macro(f15))
+a = macro2(20, 35, macro(f16))
+s = macro2(20, 35, macro(f17))
+d = macro2(20, 35, macro(f18))
 
-space       = timeout(macro(leftmouse), 150, macro(menu menu))
-enter       = kpplusminus
+h = macro2(20, 35, macro(props+left))
+j = macro2(20, 35, macro(props+down))
+k = macro2(20, 35, macro(props+up))
+l = macro2(20, 35, macro(props+right))
+u = macro2(20, 35, macro(props+up props+left))
+
+space       = timeout(macro(leftmouse), 250, macro(menu menu))
+enter       = rightmouse
 leftcontrol = rightmouse
-leftalt     = xfer
+tab         = xfer
+leftmeta    = xfer 
 leftshift  = overload(shift, oneshot(sunprops))
 rightshift = overload(shift, oneshot(sunprops))
-[ = macro2(9, 30, macro(props+pagedown))
-' = macro2(9, 30, macro(props+pageup))
+[ = macro2(2, 50, macro(props+pagedown))
+' = macro2(2, 50, macro(props+pageup))
 
++ = kpplusminus
 u = uwb
 f = front
 g = config
@@ -171,6 +170,7 @@ z = zoom
 . = kpleftparen
 / = kpplusminus
 
+
 [global]
-disable_modifier_guard = 1
+disable_modifier_guard = 0
 #macro_sequence_timeout = 50
