stable version candidate. full remake of mouse, psinkbols, fnpad

--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -2,75 +2,137 @@
 *
 
 [main]
-`   = overload(funcs, `)
+`  = overload(funcs, `)
+-  = overload(funcs, -)
 tab = overload(sunprops, tab)
-backslash = overload(sunprops, backslash)
-capslock = overload(nav, esc)
-enter = overload(nav, enter)
-rightmeta = rightcontrol
-rightalt = layer(steps)
+leftbrace = overload(sunprops, leftbrace)
+capslock = overload(psinkbols, esc)
+;        = overload(psinkbols, ;)
+rightalt = overload(altgr, enter)
+rightmeta = overload(control, rightmouse)
+rightcontrol = overload(control, rightmouse) 
 
+[meta]
+9 = macro(leftcontrol+tab)
+8 = macro(leftcontrol+leftshift+tab)
 
-[steps:G]
-left = macro(leftalt+left)
-up   = macro(leftalt+up)
-down = macro(leftalt+down)
-right = macro(leftalt+right)
-
-[funcs]
-1 = f1
-2 = f2
-3 = f3
-q = f4
-w = f5
-e = f6
-a = f7
-s = f8
-d = f9
-z = f10
-x = f11
-c = f12
-
-h = home
-j = pagedown
-k = pageup
-l = end
-
-[nav]
-up = macro(compose+up)
-down = macro(compose+down)
+[psinkbols]
 h = left
 j = down
 k = up
 l = right
+u = {
+m = }
+i = (
+o = )
+, = [
+. = ]
+y = *
+n = _
+7 = !
+8 = &
+9 = |
+0 = -
+- = +
+[ = \
+p = ^
+; = :
+/ = %
+' = "
 
-m = mute
-n = micmute
-, = volumedown
-. = volumeup
-[ = brightnessdown
-] = brightnessup
+` = ~
+1 = @
+2 = home
+3 = end
+4 = $
+q = pageup
+a = pagedown
+w = macro2(20, 35, macro(prog1))
+e = macro2(20, 35, macro(prog2))
+r = macro2(20, 35, macro(prog3))
+s = macro2(20, 35, macro(prog4))
+d = macro2(20, 35, macro(f14))
+f = macro2(20, 35, macro(f15))
+z = macro2(20, 35, macro(f16))
+x = macro2(20, 35, macro(f17))
+c = macro2(20, 35, macro(f18))
+5 = +
+t = equal
+g = >
+v = <
+rightalt = backspace
+rightmeta = delete
+rightcontrol = delete
+space = timeout(macro(leftmouse), 199, macro(menu menu))
+leftalt = xfer 
+leftcontrol = rightmouse
+leftmeta = overload( slowmouse, swap(slowmouse))
 
-0 = macro(leftcontrol+tab)
-9 = macro(leftcontrol+leftshift+tab)
+[altgr]
+f = macro(->)
+g = 6
+h = #
+up = volumeup
+down = volumedown
+left = micmute
+right = mute
 
-1 = kp1
-2 = kp2
-3 = kp3
-q = kp4
-w = kp5
-e = kp6
-a = kp7
-s = kp8
-d = kp9
-x = kp0
-leftalt = backspace
+[altgr+psinkbols]
+h = macro(leftalt+left)
+j = macro(leftalt+up)
+k = macro(leftalt+down)
+l = macro(leftalt+right)
 
-backspace = delete
-u = home
-i = pagedown
-o = pageup
-p = end
+[funcs]
+2 = f1
+3 = f2
+4 = f3
+w = f4
+e = f5
+r = f6
+s = f7
+d = f8
+f = f9
+z = f10
+x = f11
+c = f12
+[ = macro2(2, 50, macro(props+pagedown))
+' = macro2(2, 50, macro(props+pageup))
+
+8 = kpslash
+9 = kpasterisk
+0 = kpminus
+p = kpplus
+; = kpplus
+/ = kpenter 
+left = kpenter
+m = kp1
+, = kp2
+. = kp3
+j = kp4
+k = kp5
+l = kp6
+u = kp7
+i = kp8
+o = kp9
+rightalt = kp0
+rightmeta = kpdot
+
+[slowmouse]
+w = macro2(20, 35, macro(props+f1))
+e = macro2(20, 35, macro(props+up))
+r = macro2(20, 35, macro(props+f3))
+s = macro2(20, 35, macro(props+left))
+d = macro2(20, 35, macro(f14))
+f = macro2(20, 35, macro(props+right))
+z = macro2(20, 35, macro(props+f7))
+x = macro2(20, 35, macro(props+down))
+c = macro2(20, 35, macro(props+f9))
+space = timeout(macro(leftmouse), 199, macro(menu menu))
+leftalt = xfer 
+leftcontrol  = rightmouse
+rightmeta    = rightmouse
+rightcontrol = rightmouse
 
 [sunprops]
 1 = macro(props+1)
@@ -126,51 +188,68 @@ up    = macro(props+up)
 ' = macro2(3, 50, macro(props+pageup))
 backspace = macro(props+backspace)
 backslash = macro(props+backslash)
+space = leftmouse
 
-leftmeta = overload(mouse, swap(mouse))
-space = timeout(macro(leftmouse), 250, macro(menu menu))
-enter = rightmouse
+[altgr+sunprops]
+f = macro(rightalt+props+f)
+g = macro(rightalt+props+g)
+h = macro(rightalt+props+h)
 
 [mouse:props]
-1 = macro2(20, 35, macro(prog1))
-2 = macro2(20, 35, macro(prog2))
-3 = macro2(20, 35, macro(prog3))
-q = macro2(20, 35, macro(prog4))
-w = macro2(20, 35, macro(f14))
-e = macro2(20, 35, macro(f15))
-a = macro2(20, 35, macro(f16))
-s = macro2(20, 35, macro(f17))
-d = macro2(20, 35, macro(f18))
+#+ = kpplusminus
+#u = uwb
+#f = front
+#g = config
+#r = computer
+#t = hp
+#equal = scale
+#z = zoom
+#, = kpjpcomma
+#. = kpleftparen
+#/ = kpplusminus
 
-h = macro2(20, 35, macro(props+left))
-j = macro2(20, 35, macro(props+down))
-k = macro2(20, 35, macro(props+up))
-l = macro2(20, 35, macro(props+right))
-u = macro2(20, 35, macro(props+up props+left))
-
-space       = timeout(macro(leftmouse), 250, macro(menu menu))
-enter       = rightmouse
-leftcontrol = rightmouse
-tab         = xfer
-leftmeta    = xfer 
-leftshift  = overload(shift, oneshot(sunprops))
-rightshift = overload(shift, oneshot(sunprops))
-[ = macro2(2, 50, macro(props+pagedown))
-' = macro2(2, 50, macro(props+pageup))
-
-+ = kpplusminus
-u = uwb
-f = front
-g = config
-r = computer
-t = hp
-equal = scale
-z = zoom
-, = kpjpcomma
-. = kpleftparen
-/ = kpplusminus
-
+#deprecated in favour of psinkbols ( pinky symbol reach made easy )
+[mnemonics]
+1 = '
+q = ?
+a = @
+z =
+2 = "
+w = ?
+s = *
+x = !
+3 = #
+e = equal
+d = $
+c = ^
+4 = $
+r = 
+f =
+t = ~
+g = >
+v = ^
+b = `
+y =   
+h = #
+n = \
+u = _
+j = kpjpcomma
+m = -
+8 = &
+9 = |
+i = "
+k =
+, = '
+o = | 
+l = <
+. = :
+p = +
+/ = %
+' = "
+rightalt  = backspace
+rightmeta = delete
+backspace = delete
 
 [global]
-disable_modifier_guard = 0
+disable_modifier_guard = 1
 #macro_sequence_timeout = 50
