changed leftmouse to leftalt in sunprops layer

--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -9,8 +9,9 @@ leftbrace = overload(sunprops, leftbrace)
 capslock = overload(psinkbols, esc)
 ;        = overload(psinkbols, ;)
 rightalt = overload(altgr, enter)
-rightmeta = overload(control, rightmouse)
-rightcontrol = overload(control, rightmouse) 
+comma  = overloadt(shift, comma, 156)
+x      = overloadt(shift, x,     156)
+rightmeta   = overload(control, rightcontrol)
 
 [meta]
 9 = macro(leftcontrol+tab)
@@ -27,13 +28,13 @@ i = (
 o = )
 , = [
 . = ]
-y = *
-n = _
-7 = !
+y = +
+n = -
+7 = *
 8 = &
 9 = |
-0 = -
-- = +
+0 = @
+- = #
 [ = \
 p = ^
 ; = :
@@ -41,12 +42,12 @@ p = ^
 ' = "
 
 ` = ~
-1 = @
+1 = !
 2 = home
 3 = end
 4 = $
-q = pageup
-a = pagedown
+q = macro2(20, 100, macro(props+pageup))
+a = macro2(20, 100, macro(props+pagedown))
 w = macro2(20, 35, macro(prog1))
 e = macro2(20, 35, macro(prog2))
 r = macro2(20, 35, macro(prog3))
@@ -56,22 +57,23 @@ f = macro2(20, 35, macro(f15))
 z = macro2(20, 35, macro(f16))
 x = macro2(20, 35, macro(f17))
 c = macro2(20, 35, macro(f18))
-5 = +
-t = equal
-g = >
+5 = ?
+6 = @
+t = _
+g = =
 v = <
+b = >
 rightalt = backspace
-rightmeta = delete
+rightmeta    = delete
 rightcontrol = delete
-space = timeout(macro(leftmouse), 199, macro(menu menu))
-leftalt = xfer 
-leftcontrol = rightmouse
+leftalt = timeout(macro(leftmouse), 199, macro(menu menu))
+leftshift  = rightmouse
+rightshift = rightmouse
 leftmeta = overload( slowmouse, swap(slowmouse))
+backspace = delete
 
 [altgr]
 f = macro(->)
-g = 6
-h = #
 up = volumeup
 down = volumedown
 left = micmute
@@ -84,6 +86,8 @@ k = macro(leftalt+down)
 l = macro(leftalt+right)
 
 [funcs]
+q = pageup
+a = pagedown
 2 = f1
 3 = f2
 4 = f3
@@ -96,8 +100,6 @@ f = f9
 z = f10
 x = f11
 c = f12
-[ = macro2(2, 50, macro(props+pagedown))
-' = macro2(2, 50, macro(props+pageup))
 
 8 = kpslash
 9 = kpasterisk
@@ -128,11 +130,9 @@ f = macro2(20, 35, macro(props+right))
 z = macro2(20, 35, macro(props+f7))
 x = macro2(20, 35, macro(props+down))
 c = macro2(20, 35, macro(props+f9))
-space = timeout(macro(leftmouse), 199, macro(menu menu))
-leftalt = xfer 
-leftcontrol  = rightmouse
-rightmeta    = rightmouse
-rightcontrol = rightmouse
+leftalt = timeout(macro(leftmouse), 199, macro(menu menu))
+leftshift  = rightmouse
+rightshift = rightmouse
 
 [sunprops]
 1 = macro(props+1)
@@ -183,17 +183,15 @@ left  = macro(props+left)
 right = macro(props+right)
 down  = macro(props+down)
 up    = macro(props+up)
-] = macro(props+])
-[ = macro2(3, 50, macro(props+pagedown))
-' = macro2(3, 50, macro(props+pageup))
+rightbrace = macro(props+rightbrace)
+##leftbrace = macro(props+leftbrace)
+apostrophe = macro(props+apostrophe)
 backspace = macro(props+backspace)
 backslash = macro(props+backslash)
 space = leftmouse
 
 [altgr+sunprops]
 f = macro(rightalt+props+f)
-g = macro(rightalt+props+g)
-h = macro(rightalt+props+h)
 
 [mouse:props]
 #+ = kpplusminus
@@ -251,5 +249,6 @@ rightmeta = delete
 backspace = delete
 
 [global]
+overload_tap_timeout = 650
 disable_modifier_guard = 1
 #macro_sequence_timeout = 50
