some symbol and mouse changes

--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -2,16 +2,21 @@
 *
 
 [main]
-`  = overload(funcs, `)
--  = overload(funcs, -)
+` = overload(funcs, `)
+- = overload(funcs, -)
 tab = overload(sunprops, tab)
 leftbrace = overload(sunprops, leftbrace)
 capslock = overload(psinkbols, esc)
 ;        = overload(psinkbols, ;)
+#z      = overloadt(shift, z, 150)
+#dot    = overload(shift, dot)
 rightalt = overload(altgr, enter)
-comma  = overloadt(shift, comma, 156)
-x      = overloadt(shift, x,     156)
-rightmeta   = overload(control, rightcontrol)
+rightmeta = overload(control, rightcontrol)
+leftmeta = overload(meta, macro(leftcontrol+insert))
+
+[shift]
+leftshift = capslock
+rightshift = capslock
 
 [meta]
 9 = macro(leftcontrol+tab)
@@ -33,8 +38,8 @@ n = -
 7 = *
 8 = &
 9 = |
-0 = @
-- = #
+0 = #
+- = \
 [ = \
 p = ^
 ; = :
@@ -43,11 +48,13 @@ p = ^
 
 ` = ~
 1 = !
-2 = home
-3 = end
+2 = "
+3 = ?
 4 = $
-q = macro2(20, 100, macro(props+pageup))
-a = macro2(20, 100, macro(props+pagedown))
+#q = macro2(40, 200, macro(props+pageup))
+#a = macro2(40, 200, macro(props+pagedown))
+q = macro(props+pageup)
+a = macro(props+pagedown)
 w = macro2(20, 35, macro(prog1))
 e = macro2(20, 35, macro(prog2))
 r = macro2(20, 35, macro(prog3))
@@ -57,8 +64,8 @@ f = macro2(20, 35, macro(f15))
 z = macro2(20, 35, macro(f16))
 x = macro2(20, 35, macro(f17))
 c = macro2(20, 35, macro(f18))
-5 = ?
-6 = @
+5 = @
+6 = macro(->) 
 t = _
 g = =
 v = <
@@ -66,28 +73,25 @@ b = >
 rightalt = backspace
 rightmeta    = delete
 rightcontrol = delete
-leftalt = timeout(macro(leftmouse), 199, macro(menu menu))
+leftalt = timeout(macro(leftmouse), 233, macro(menu menu))
 leftshift  = rightmouse
 rightshift = rightmouse
-leftmeta = overload( slowmouse, swap(slowmouse))
 backspace = delete
+capslock = overload( slowmouse, swap(slowmouse))
 
 [altgr]
-f = macro(->)
 up = volumeup
 down = volumedown
 left = micmute
 right = mute
 
 [altgr+psinkbols]
-h = macro(leftalt+left)
-j = macro(leftalt+up)
-k = macro(leftalt+down)
-l = macro(leftalt+right)
+h = home
+j = pagedown
+k = pageup
+l = end
 
 [funcs]
-q = pageup
-a = pagedown
 2 = f1
 3 = f2
 4 = f3
@@ -130,7 +134,7 @@ f = macro2(20, 35, macro(props+right))
 z = macro2(20, 35, macro(props+f7))
 x = macro2(20, 35, macro(props+down))
 c = macro2(20, 35, macro(props+f9))
-leftalt = timeout(macro(leftmouse), 199, macro(menu menu))
+leftalt = timeout(macro(leftmouse), 233, macro(menu menu))
 leftshift  = rightmouse
 rightshift = rightmouse
 
@@ -189,9 +193,6 @@ apostrophe = macro(props+apostrophe)
 backspace = macro(props+backspace)
 backslash = macro(props+backslash)
 space = leftmouse
-
-[altgr+sunprops]
-f = macro(rightalt+props+f)
 
 [mouse:props]
 #+ = kpplusminus
