tweaks in cursor mode, numpad?

--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -6,7 +6,7 @@
 - = overload(funcs, -)
 tab = overload(sunprops, tab)
 leftbrace = overload(sunprops, leftbrace)
-capslock = overload(psinkbols, esc)
+capslock = overload(cursor, esc)
 ;        = overload(psinkbols, ;)
 #z      = overloadt(shift, z, 150)
 #dot    = overload(shift, dot)
@@ -22,6 +22,52 @@ rightshift = capslock
 9 = macro(leftcontrol+tab)
 8 = macro(leftcontrol+leftshift+tab)
 
+[cursor]
+2 = macro(props+left)
+3 = macro(props+up)
+4 = macro(props+down)
+5 = macro(props+right)
+w = macro2(20, 35, macro(prog1))
+e = macro2(20, 35, macro(prog2))
+r = macro2(20, 35, macro(prog3))
+s = macro2(20, 35, macro(prog4))
+d = swap(slowmouse)
+f = macro2(20, 35, macro(f15))
+z = macro2(20, 35, macro(f16))
+x = macro2(20, 35, macro(f17))
+c = macro2(20, 35, macro(f18))
+b = leftmouse
+g = timeout(macro(leftmouse), 233, macro(menu menu))
+v = rightmouse
+b = macro(f14)
+space = toggle(slowmouse)
+capslock = clear()
+leftalt = noop
+m = kp1
+, = kp2
+. = kp3
+j = kp4
+k = kp5
+l = kp6
+u = kp7
+i = kp8
+o = kp9
+rightalt = kp0
+
+8 = kpslash
+9 = kpasterisk
+y = kpplus
+n = kpminus
+/ = kpenter 
+p = backspace
+rightmeta = kpdot
+rightcontrol = kpdot
+#h = left
+#j = down
+#k = up
+#l = right
+backspace = delete
+
 [psinkbols]
 h = left
 j = down
@@ -29,55 +75,46 @@ k = up
 l = right
 u = {
 m = }
-i = (
-o = )
-, = [
-. = ]
+i = )
+o = (
+, = ]
+. = [
 y = +
 n = -
-7 = *
 8 = &
 9 = |
 0 = #
 - = \
-[ = \
 p = ^
-; = :
 / = %
-' = "
 
 ` = ~
-1 = !
 2 = "
 3 = ?
 4 = $
-#q = macro2(40, 200, macro(props+pageup))
-#a = macro2(40, 200, macro(props+pagedown))
-q = macro(props+pageup)
-a = macro(props+pagedown)
-w = macro2(20, 35, macro(prog1))
-e = macro2(20, 35, macro(prog2))
-r = macro2(20, 35, macro(prog3))
-s = macro2(20, 35, macro(prog4))
-d = macro2(20, 35, macro(f14))
-f = macro2(20, 35, macro(f15))
-z = macro2(20, 35, macro(f16))
-x = macro2(20, 35, macro(f17))
-c = macro2(20, 35, macro(f18))
-5 = @
-6 = macro(->) 
-t = _
-g = =
-v = <
-b = >
+5 = macro(->) 
+q = !
+w = &
+e = ^
+r = *
+t = %
+a = '
+s = <
+d = equal
+f = >
+g = macro(:)
+z = #
+x = |
+c = _
+v = \
+b = @
 rightalt = backspace
 rightmeta    = delete
 rightcontrol = delete
-leftalt = timeout(macro(leftmouse), 233, macro(menu menu))
+#leftalt = timeout(macro(leftmouse), 233, macro(menu menu))
 leftshift  = rightmouse
-rightshift = rightmouse
 backspace = delete
-capslock = overload( slowmouse, swap(slowmouse))
+capslock = toggle(cursor)
 
 [altgr]
 up = volumeup
@@ -105,38 +142,29 @@ z = f10
 x = f11
 c = f12
 
-8 = kpslash
-9 = kpasterisk
-0 = kpminus
-p = kpplus
-; = kpplus
-/ = kpenter 
-left = kpenter
-m = kp1
-, = kp2
-. = kp3
-j = kp4
-k = kp5
-l = kp6
-u = kp7
-i = kp8
-o = kp9
-rightalt = kp0
-rightmeta = kpdot
 
 [slowmouse]
+2 = macro(props+left)
+3 = macro(props+up)
+4 = macro(props+down)
+5 = macro(props+right)
 w = macro2(20, 35, macro(props+f1))
-e = macro2(20, 35, macro(props+up))
+e = macro2(20, 35, macro(props+f2))
 r = macro2(20, 35, macro(props+f3))
-s = macro2(20, 35, macro(props+left))
-d = macro2(20, 35, macro(f14))
-f = macro2(20, 35, macro(props+right))
+s = macro2(20, 35, macro(props+f4))
+d = swap(cursor)
+f = macro2(20, 35, macro(props+f6))
 z = macro2(20, 35, macro(props+f7))
-x = macro2(20, 35, macro(props+down))
+x = macro2(20, 35, macro(props+f8))
 c = macro2(20, 35, macro(props+f9))
-leftalt = timeout(macro(leftmouse), 233, macro(menu menu))
-leftshift  = rightmouse
-rightshift = rightmouse
+g = timeout(macro(leftmouse), 233, macro(menu menu))
+v = rightmouse
+b = macro(f14)
+h = left
+j = down
+k = up
+l = right
+capslock = clear()
 
 [sunprops]
 1 = macro(props+1)
@@ -206,48 +234,6 @@ space = leftmouse
 #, = kpjpcomma
 #. = kpleftparen
 #/ = kpplusminus
-
-#deprecated in favour of psinkbols ( pinky symbol reach made easy )
-[mnemonics]
-1 = '
-q = ?
-a = @
-z =
-2 = "
-w = ?
-s = *
-x = !
-3 = #
-e = equal
-d = $
-c = ^
-4 = $
-r = 
-f =
-t = ~
-g = >
-v = ^
-b = `
-y =   
-h = #
-n = \
-u = _
-j = kpjpcomma
-m = -
-8 = &
-9 = |
-i = "
-k =
-, = '
-o = | 
-l = <
-. = :
-p = +
-/ = %
-' = "
-rightalt  = backspace
-rightmeta = delete
-backspace = delete
 
 [global]
 overload_tap_timeout = 650
