I have accepted this will never be over. That said. It's starting to 'feel' complete. (complete revamps of mouse and capslock modes)

--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -4,12 +4,11 @@
 [main]
 ` = overload(funcs, `)
 - = overload(funcs, -)
-tab = overload(sunprops, tab)
-leftbrace = overload(sunprops, leftbrace)
-capslock = overload(cursor, esc)
-;        = overload(psinkbols, ;)
-#z      = overloadt(shift, z, 150)
-#dot    = overload(shift, dot)
+; = overload(psinkbols, ;)
+tab = overload(cursor, tab)
+leftbrace = overload(cursor, leftbrace)
+capslock = overload(funcs, esc)
+'        = overload(funcs, ')
 rightalt = overload(altgr, enter)
 rightmeta = overload(control, rightcontrol)
 leftmeta = overload(meta, macro(leftcontrol+insert))
@@ -23,98 +22,292 @@ rightshift = capslock
 8 = macro(leftcontrol+leftshift+tab)
 
 [cursor]
-2 = macro(props+left)
-3 = macro(props+up)
-4 = macro(props+down)
-5 = macro(props+right)
-w = macro2(20, 35, macro(prog1))
-e = macro2(20, 35, macro(prog2))
-r = macro2(20, 35, macro(prog3))
-s = macro2(20, 35, macro(prog4))
-d = swap(slowmouse)
-f = macro2(20, 35, macro(f15))
-z = macro2(20, 35, macro(f16))
-x = macro2(20, 35, macro(f17))
-c = macro2(20, 35, macro(f18))
-b = leftmouse
-g = timeout(macro(leftmouse), 233, macro(menu menu))
-v = rightmouse
-b = macro(f14)
-space = toggle(slowmouse)
-capslock = clear()
-leftalt = noop
-m = kp1
-, = kp2
-. = kp3
-j = kp4
-k = kp5
-l = kp6
-u = kp7
-i = kp8
-o = kp9
-rightalt = kp0
+1 = macro(leftmeta+2)
+2 = macro(props+home)
+3 = macro(props+pageup)
+4 = macro(props+pagedown)
+5 = macro(props+end)
+q = macro(leftmeta+3)
+w = home 
+r = end
+t = pageup
+a = macro(leftmeta+4)
+g = pagedown
+s = overload(lprops, left)
+e = overload(uprops, up)
+d = overload(dprops, down)
+f = overload(rprops, right)
+z = macro(leftmeta+w)
+x = macro(leftmeta+e)
+c = macro(leftmeta+r)
+v = macro(leftmeta+s)
+b = macro(leftmeta+d)
 
-8 = kpslash
-9 = kpasterisk
-y = kpplus
-n = kpminus
-/ = kpenter 
-p = backspace
-rightmeta = kpdot
-rightcontrol = kpdot
-#h = left
-#j = down
-#k = up
-#l = right
-backspace = delete
+capslock = clear()
+tab = toggle(cursor)
+leftbrace = toggle(cursor)
+
+u = macro2(20, 35, macro(prog1))
+i = macro2(20, 35, macro(prog2))
+o = macro2(20, 35, macro(prog3))
+j = macro2(20, 35, macro(prog4))
+k = swap(slowmouse)
+l = macro2(20, 35, macro(f15))
+m = macro2(20, 35, macro(f16))
+, = macro2(20, 35, macro(f17))
+. = macro2(20, 35, macro(f18))
+h = timeout(macro(leftmouse), 233, macro(menu menu))
+; = overload(psinkbols, rightmouse)
+
+[ulprops]
+7 = macro(props+prog1+7)
+8 = macro(props+prog1+8)
+9 = macro(props+prog1+9)
+0 = macro(props+prog1+0)
+- = macro(props+prog1+-)
+y = macro(props+prog1+y)
+u = macro(props+prog1+u)
+i = macro(props+prog1+i)
+o = macro(props+prog1+o)
+p = macro(props+prog1+p)
+h = macro(props+prog1+h)
+j = macro(props+prog1+j)
+k = macro(props+prog1+k)
+l = macro(props+prog1+l)
+; = macro(props+prog1+;)
+n = macro(props+prog1+n)
+m = macro(props+prog1+m)
+, = macro(props+prog1+,)
+. = macro(props+prog1+.)
+/ = macro(props+prog1+/)
+
+[urprops]
+7 = macro(props+prog3+7)
+8 = macro(props+prog3+8)
+9 = macro(props+prog3+9)
+0 = macro(props+prog3+0)
+- = macro(props+prog3+-)
+y = macro(props+prog3+y)
+u = macro(props+prog3+u)
+i = macro(props+prog3+i)
+o = macro(props+prog3+o)
+p = macro(props+prog3+p)
+h = macro(props+prog3+h)
+j = macro(props+prog3+j)
+k = macro(props+prog3+k)
+l = macro(props+prog3+l)
+; = macro(props+prog3+;)
+n = macro(props+prog3+n)
+m = macro(props+prog3+m)
+, = macro(props+prog3+,)
+. = macro(props+prog3+.)
+/ = macro(props+prog3+/)
+
+[mprops]
+7 = macro(props+f14+7)
+8 = macro(props+f14+8)
+9 = macro(props+f14+9)
+0 = macro(props+f14+0)
+- = macro(props+f14+-)
+y = macro(props+f14+y)
+u = macro(props+f14+u)
+i = macro(props+f14+i)
+o = macro(props+f14+o)
+p = macro(props+f14+p)
+h = macro(props+f14+h)
+j = macro(props+f14+j)
+k = macro(props+f14+k)
+l = macro(props+f14+l)
+; = macro(props+f14+;)
+n = macro(props+f14+n)
+m = macro(props+f14+m)
+, = macro(props+f14+,)
+. = macro(props+f14+.)
+/ = macro(props+f14+/)
+
+[dlprops]
+7 = macro(props+f16+7)
+8 = macro(props+f16+8)
+9 = macro(props+f16+9)
+0 = macro(props+f16+0)
+- = macro(props+f16+-)
+y = macro(props+f16+y)
+u = macro(props+f16+u)
+i = macro(props+f16+i)
+o = macro(props+f16+o)
+p = macro(props+f16+p)
+h = macro(props+f16+h)
+j = macro(props+f16+j)
+k = macro(props+f16+k)
+l = macro(props+f16+l)
+; = macro(props+f16+;)
+n = macro(props+f16+n)
+m = macro(props+f16+m)
+, = macro(props+f16+,)
+. = macro(props+f16+.)
+/ = macro(props+f16+/)
+
+[drprops]
+7 = macro(props+f18+7)
+8 = macro(props+f18+8)
+9 = macro(props+f18+9)
+0 = macro(props+f18+0)
+- = macro(props+f18+-)
+y = macro(props+f18+y)
+u = macro(props+f18+u)
+i = macro(props+f18+i)
+o = macro(props+f18+o)
+p = macro(props+f18+p)
+h = macro(props+f18+h)
+j = macro(props+f18+j)
+k = macro(props+f18+k)
+l = macro(props+f18+l)
+; = macro(props+f18+;)
+n = macro(props+f18+n)
+m = macro(props+f18+m)
+, = macro(props+f18+,)
+. = macro(props+f18+.)
+/ = macro(props+f18+/)
+
+[uprops]
+s = layer(ulprops)
+f = layer(urprops)
+7 = macro(props+prog2+7)
+8 = macro(props+prog2+8)
+9 = macro(props+prog2+9)
+0 = macro(props+prog2+0)
+- = macro(props+prog2+-)
+y = macro(props+prog2+y)
+u = macro(props+prog2+u)
+i = macro(props+prog2+i)
+o = macro(props+prog2+o)
+p = macro(props+prog2+p)
+h = macro(props+prog2+h)
+j = macro(props+prog2+j)
+k = macro(props+prog2+k)
+l = macro(props+prog2+l)
+; = macro(props+prog2+;)
+n = macro(props+prog2+n)
+m = macro(props+prog2+m)
+, = macro(props+prog2+,)
+. = macro(props+prog2+.)
+/ = macro(props+prog2+/)
+
+[lprops]
+e = layer(ulprops)
+d = layer(dlprops)
+f = layer(mprops)
+7 = macro(props+prog4+7)
+8 = macro(props+prog4+8)
+9 = macro(props+prog4+9)
+0 = macro(props+prog4+0)
+- = macro(props+prog4+-)
+y = macro(props+prog4+y)
+u = macro(props+prog4+u)
+i = macro(props+prog4+i)
+o = macro(props+prog4+o)
+p = macro(props+prog4+p)
+h = macro(props+prog4+h)
+j = macro(props+prog4+j)
+k = macro(props+prog4+k)
+l = macro(props+prog4+l)
+; = macro(props+prog4+;)
+n = macro(props+prog4+n)
+m = macro(props+prog4+m)
+, = macro(props+prog4+,)
+. = macro(props+prog4+.)
+/ = macro(props+prog4+/)
+
+[rprops]
+e = layer(urprops)
+d = layer(drprops)
+s = layer(mprops)
+7 = macro(props+f15+7)
+8 = macro(props+f15+8)
+9 = macro(props+f15+9)
+0 = macro(props+f15+0)
+- = macro(props+f15+-)
+y = macro(props+f15+y)
+u = macro(props+f15+u)
+i = macro(props+f15+i)
+o = macro(props+f15+o)
+p = macro(props+f15+p)
+h = macro(props+f15+h)
+j = macro(props+f15+j)
+k = macro(props+f15+k)
+l = macro(props+f15+l)
+; = macro(props+f15+;)
+n = macro(props+f15+n)
+m = macro(props+f15+m)
+, = macro(props+f15+,)
+. = macro(props+f15+.)
+/ = macro(props+f15+/)
+
+[dprops]
+s = layer(dlprops)
+f = layer(drprops)
+7 = macro(props+f17+7)
+8 = macro(props+f17+8)
+9 = macro(props+f17+9)
+0 = macro(props+f17+0)
+- = macro(props+f17+-)
+y = macro(props+f17+y)
+u = macro(props+f17+u)
+i = macro(props+f17+i)
+o = macro(props+f17+o)
+p = macro(props+f17+p)
+h = macro(props+f17+h)
+j = macro(props+f17+j)
+k = macro(props+f17+k)
+l = macro(props+f17+l)
+; = macro(props+f17+;)
+n = macro(props+f17+n)
+m = macro(props+f17+m)
+, = macro(props+f17+,)
+. = macro(props+f17+.)
+/ = macro(props+f17+/)
 
 [psinkbols]
 h = left
 j = down
 k = up
 l = right
-u = {
-m = }
-i = )
-o = (
-, = ]
-. = [
-y = +
-n = -
+y = ^
+u = <
+i = equal
+o = >
+n = %
+m = _
+, = #
+. = '
 8 = &
 9 = |
-0 = #
-- = \
-p = ^
-/ = %
 
-` = ~
+~ = macro(->)
 2 = "
 3 = ?
 4 = $
-5 = macro(->) 
-q = !
-w = &
-e = ^
-r = *
-t = %
-a = '
-s = <
-d = equal
-f = >
+5 = ~
+q = +
+w = [
+e = ]
+r = {
+t = !
+a = -
+s = (
+d = )
+f = }
 g = macro(:)
-z = #
-x = |
-c = _
+z = @
+x = /
+c = *
 v = \
-b = @
 rightalt = backspace
 rightmeta    = delete
 rightcontrol = delete
 #leftalt = timeout(macro(leftmouse), 233, macro(menu menu))
 leftshift  = rightmouse
 backspace = delete
-capslock = toggle(cursor)
 
 [altgr]
 up = volumeup
@@ -142,42 +335,69 @@ z = f10
 x = f11
 c = f12
 
+m = kp1
+, = kp2
+. = kp3
+j = kp4
+k = kp5
+l = kp6
+u = kp7
+i = kp8
+o = kp9
+rightalt = kp0
+
+8 = kpslash
+9 = kpasterisk
+y = kpplus
+n = kpminus
+/ = kpenter 
+p = backspace
+rightmeta = kpdot
+rightcontrol = kpdot
+#h = left
+#j = down
+#k = up
+#l = right
 
 [slowmouse]
-2 = macro(props+left)
-3 = macro(props+up)
-4 = macro(props+down)
-5 = macro(props+right)
-w = macro2(20, 35, macro(props+f1))
-e = macro2(20, 35, macro(props+f2))
-r = macro2(20, 35, macro(props+f3))
-s = macro2(20, 35, macro(props+f4))
-d = swap(cursor)
-f = macro2(20, 35, macro(props+f6))
-z = macro2(20, 35, macro(props+f7))
-x = macro2(20, 35, macro(props+f8))
-c = macro2(20, 35, macro(props+f9))
-g = timeout(macro(leftmouse), 233, macro(menu menu))
-v = rightmouse
-b = macro(f14)
-h = left
-j = down
-k = up
-l = right
+2 = macro(props+home)
+3 = macro(props+pageup)
+4 = macro(props+pagedown)
+5 = macro(props+end)
+w = home 
+r = end
+t = pageup
+g = pagedown
+s = overload(lprops, left)
+e = overload(uprops, up)
+d = overload(dprops, down)
+f = overload(rprops, right)
+u = macro2(20, 35, macro(leftshift+prog1))
+i = macro2(20, 35, macro(leftshift+prog2))
+o = macro2(20, 35, macro(leftshift+prog3))
+j = macro2(20, 35, macro(leftshift+prog4))
+k = swap(cursor)
+l = macro2(20, 35, macro(leftshift+f15))
+m = macro2(20, 35, macro(leftshift+f16))
+, = macro2(20, 35, macro(leftshift+f17))
+. = macro2(20, 35, macro(leftshift+f18))
+h = timeout(macro(leftmouse), 233, macro(menu menu))
+; = rightmouse
+#b = macro(f14)
 capslock = clear()
 
 [sunprops]
-1 = macro(props+1)
-2 = macro(props+2)
-3 = macro(props+3)
-4 = macro(props+4)
-5 = macro(props+5)
-6 = macro(props+6)
+#1 = macro(props+1)
+#2 = macro(props+2)
+#3 = macro(props+3)
+#4 = macro(props+4)
+#5 = macro(props+5)
+#6 = macro(props+6)
 7 = macro(props+7)
 8 = macro(props+8)
 9 = macro(props+9)
 0 = macro(props+0)
-q = macro(props+q)
+#q = macro(props+f5)
 w = macro(props+w)
 e = macro(props+e)
 r = macro(props+r)
@@ -187,7 +407,7 @@ u = macro(props+u)
 i = macro(props+i)
 o = macro(props+o)
 p = macro(props+p)
-a = macro(props+a)
+#a = macro(props+a)
 s = macro(props+s)
 d = macro(props+d)
 f = macro(props+f)
@@ -222,20 +442,5 @@ backspace = macro(props+backspace)
 backslash = macro(props+backslash)
 space = leftmouse
 
-[mouse:props]
-#+ = kpplusminus
-#u = uwb
-#f = front
-#g = config
-#r = computer
-#t = hp
-#equal = scale
-#z = zoom
-#, = kpjpcomma
-#. = kpleftparen
-#/ = kpplusminus
-
 [global]
 overload_tap_timeout = 650
-disable_modifier_guard = 1
-#macro_sequence_timeout = 50
