minimal fixes. mouse wheel on y89p

--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -12,6 +12,7 @@ capslock = overload(funcs, esc)
 rightalt = overload(altgr, enter)
 rightmeta = overload(control, rightcontrol)
 leftmeta = overload(meta, macro(leftcontrol+insert))
+/ = overload(shift, /)  
 
 [shift]
 leftshift = capslock
@@ -22,42 +23,39 @@ rightshift = capslock
 8 = macro(leftcontrol+leftshift+tab)
 
 [cursor]
-1 = macro(leftmeta+2)
-2 = macro(props+home)
-3 = macro(props+pageup)
-4 = macro(props+pagedown)
-5 = macro(props+end)
-q = macro(leftmeta+3)
-w = home 
-r = end
-t = pageup
-a = macro(leftmeta+4)
-g = pagedown
+w = overload(ulprops, home)
+r = overload(urprops, end)
 s = overload(lprops, left)
 e = overload(uprops, up)
-d = overload(dprops, down)
+d = overload(mprops, down)
 f = overload(rprops, right)
-z = macro(leftmeta+w)
-x = macro(leftmeta+e)
-c = macro(leftmeta+r)
-v = macro(leftmeta+s)
-b = macro(leftmeta+d)
+t = pageup
+g = pagedown
+z = macro(props+home)
+x = macro(props+end)
+c = layer(slowmouse)
+v = xfer
 
 capslock = clear()
 tab = toggle(cursor)
 leftbrace = toggle(cursor)
 
+y = macro(props+home)
+8 = macro(props+pagedown)
+9 = macro(props+pageup)
+p = macro(props+end)
+h = timeout(macro(leftmouse), 233, macro(menu menu))
 u = macro2(20, 35, macro(prog1))
 i = macro2(20, 35, macro(prog2))
 o = macro2(20, 35, macro(prog3))
 j = macro2(20, 35, macro(prog4))
-k = swap(slowmouse)
+k = macro(leftshift+f14) 
 l = macro2(20, 35, macro(f15))
 m = macro2(20, 35, macro(f16))
 , = macro2(20, 35, macro(f17))
 . = macro2(20, 35, macro(f18))
-h = timeout(macro(leftmouse), 233, macro(menu menu))
 ; = overload(psinkbols, rightmouse)
+n = xfer
 
 [ulprops]
 7 = macro(props+prog1+7)
@@ -103,27 +101,6 @@ m = macro(props+prog3+m)
 . = macro(props+prog3+.)
 / = macro(props+prog3+/)
 
-[mprops]
-7 = macro(props+f14+7)
-8 = macro(props+f14+8)
-9 = macro(props+f14+9)
-0 = macro(props+f14+0)
-- = macro(props+f14+-)
-y = macro(props+f14+y)
-u = macro(props+f14+u)
-i = macro(props+f14+i)
-o = macro(props+f14+o)
-p = macro(props+f14+p)
-h = macro(props+f14+h)
-j = macro(props+f14+j)
-k = macro(props+f14+k)
-l = macro(props+f14+l)
-; = macro(props+f14+;)
-n = macro(props+f14+n)
-m = macro(props+f14+m)
-, = macro(props+f14+,)
-. = macro(props+f14+.)
-/ = macro(props+f14+/)
 
 [dlprops]
 7 = macro(props+f16+7)
@@ -169,6 +146,30 @@ m = macro(props+f18+m)
 . = macro(props+f18+.)
 / = macro(props+f18+/)
 
+[mprops]
+s = layer(dlprops)
+f = layer(drprops)
+7 = macro(props+f14+7)
+8 = macro(props+f14+8)
+9 = macro(props+f14+9)
+0 = macro(props+f14+0)
+- = macro(props+f14+-)
+y = macro(props+f14+y)
+u = macro(props+f14+u)
+i = macro(props+f14+i)
+o = macro(props+f14+o)
+p = macro(props+f14+p)
+h = macro(props+f14+h)
+j = macro(props+f14+j)
+k = macro(props+f14+k)
+l = macro(props+f14+l)
+; = macro(props+f14+;)
+n = macro(props+f14+n)
+m = macro(props+f14+m)
+, = macro(props+f14+,)
+. = macro(props+f14+.)
+/ = macro(props+f14+/)
+
 [uprops]
 s = layer(ulprops)
 f = layer(urprops)
@@ -196,7 +197,7 @@ m = macro(props+prog2+m)
 [lprops]
 e = layer(ulprops)
 d = layer(dlprops)
-f = layer(mprops)
+f = layer(dprops)
 7 = macro(props+prog4+7)
 8 = macro(props+prog4+8)
 9 = macro(props+prog4+9)
@@ -221,7 +222,7 @@ m = macro(props+prog4+m)
 [rprops]
 e = layer(urprops)
 d = layer(drprops)
-s = layer(mprops)
+s = layer(dprops)
 7 = macro(props+f15+7)
 8 = macro(props+f15+8)
 9 = macro(props+f15+9)
@@ -244,8 +245,6 @@ m = macro(props+f15+m)
 / = macro(props+f15+/)
 
 [dprops]
-s = layer(dlprops)
-f = layer(drprops)
 7 = macro(props+f17+7)
 8 = macro(props+f17+8)
 9 = macro(props+f17+9)
@@ -273,8 +272,8 @@ j = down
 k = up
 l = right
 y = ^
-u = <
-i = equal
+u = equal
+i = <
 o = >
 n = %
 m = _
@@ -360,30 +359,21 @@ rightcontrol = kpdot
 #l = right
 
 [slowmouse]
-2 = macro(props+home)
-3 = macro(props+pageup)
-4 = macro(props+pagedown)
-5 = macro(props+end)
-w = home 
-r = end
-t = pageup
-g = pagedown
-s = overload(lprops, left)
-e = overload(uprops, up)
-d = overload(dprops, down)
-f = overload(rprops, right)
+y = macro(props+home)
+/ = macro(props+end)
+n = macro(props+pagedown)
+p = macro(props+pageup)
+h = timeout(macro(leftmouse), 233, macro(menu menu))
+; = overload(psinkbols, rightmouse)
 u = macro2(20, 35, macro(leftshift+prog1))
 i = macro2(20, 35, macro(leftshift+prog2))
 o = macro2(20, 35, macro(leftshift+prog3))
 j = macro2(20, 35, macro(leftshift+prog4))
-k = swap(cursor)
+k = macro(leftshift+f14)
 l = macro2(20, 35, macro(leftshift+f15))
 m = macro2(20, 35, macro(leftshift+f16))
 , = macro2(20, 35, macro(leftshift+f17))
 . = macro2(20, 35, macro(leftshift+f18))
-h = timeout(macro(leftmouse), 233, macro(menu menu))
-; = rightmouse
-#b = macro(f14)
 capslock = clear()
 
 [sunprops]
