--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -49,7 +49,8 @@ http {
         #access_log  logs/host.access.log  main;
 
         location / {
-            index  index.html index.htm;
+            index index.html index.php;
+	    #try_files $uri /index.php$is_args$args;
         }
 	include php.conf;
 
